--- a/foodgram/requirements.txt
+++ b/foodgram/requirements.txt
@@ -8,14 +8,19 @@ coreschema==0.0.4
 cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.0.6
+django-colorfield==0.7.2
+django-cors-headers==3.13.0
+django-extensions==3.2.0
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 djoser==2.1.0
 drf-extra-fields==3.4.0
+drf-yasg==1.21.3
 flake8==5.0.0
 idna==3.3
+inflection==0.5.1
 iniconfig==1.1.1
 itypes==1.2.0
 Jinja2==3.1.2
@@ -23,8 +28,10 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.0
 packaging==21.3
+Pillow==9.2.0
 pluggy==1.0.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 py==1.11.0
 pycodestyle==2.9.0
 pycparser==2.21
@@ -37,6 +44,8 @@ python3-openid==3.2.0
 pytz==2022.1
 requests==2.28.1
 requests-oauthlib==1.3.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
