--- a/foodgram/requirements.txt
+++ b/foodgram/requirements.txt
@@ -7,21 +7,26 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==37.0.4
 defusedxml==0.7.1
-Django==3.2.15
+Django==3.2
 django-colorfield==0.7.2
 django-cors-headers==3.13.0
 django-extensions==3.2.0
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
-djangorestframework-simplejwt==5.2.0
-djoser==4.3.0
+#djangorestframework-simplejwt==5.2.0
+djoser==2.1.0
 drf-extra-fields==3.4.0
 drf-yasg==1.21.3
 flake8==5.0.0
+flake8-broken-line==0.5.0
+flake8-isort==4.2.0
+flake8-plugin-utils==1.3.2
+flake8-return==1.1.3
 idna==3.3
 inflection==0.5.1
 iniconfig==1.1.1
+isort==5.10.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
@@ -29,6 +34,7 @@ mccabe==0.7.0
 oauthlib==3.2.0
 packaging==21.3
 pep8==1.7.1
+pep8-naming==0.13.1
 Pillow==9.2.0
 pluggy==1.0.0
 psycopg2==2.9.3
@@ -54,4 +60,3 @@ sqlparse==0.4.2
 tomli==2.0.1
 uritemplate==4.1.1
 urllib3==1.26.11
-gunicorn==20.0.4
