--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ django-extensions==3.2.0
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.13.1
-#djangorestframework-simplejwt==5.2.0
+djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.4.0
 drf-yasg==1.21.3
