--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,16 @@ jobs:
         python-version: 3.7
 
     - name: Install dependencies
-      run: | 
-        python -m pip install --upgrade pip 
+      run: |
+        python -m pip install --upgrade pip
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r requirements.txt 
+        pip install -r requirements.txt
 
     - name: Test with flake8 and django tests
       run: |
-        python -m flake8
-        cd foodgram
-        python manage.py test
-  
+        python -m flake8       
+        python -m pytest
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -40,7 +39,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }} 
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v2 
         with:
           context: ./foodgram
           push: true
@@ -83,4 +82,3 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: ${{ github.workflow }} успешно выполнен!
-
