--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.3'
-
 services:
 
   db:
@@ -31,15 +30,13 @@ services:
     image: nginx:1.21.3-alpine
     ports:
       - "80:80"
-
     restart: always
-    
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf/:/etc/letsencrypt
+     # - ./certbot/www:/var/www/certbot
+     # - ./certbot/conf/:/etc/letsencrypt
       - static_value:/var/html/static/
       - media_value:/var/html/media/
    
@@ -49,7 +46,7 @@ services:
 
 
 volumes:
-  db:
+ # db:
   postgres_data:
   static_value:
   media_value:
