--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,13 +7,17 @@ services:
       - /var/lib/postgresql/data/
     env_file:
       - ./.env
+    ports:
+      - "5432:5432"
   
   backend:
     image: annarulunat/foodgram:latest
     restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/app/backend_static/
+      - media_value:/app/backend_media/
+      #- static_value:/app/static/
+      #- media_value:/app/media/
     depends_on:
       - db
     env_file:
@@ -35,10 +39,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/backend_static/
+      - media_value:/var/html/backend_media/
      # - ./certbot/www:/var/www/certbot
      # - ./certbot/conf/:/etc/letsencrypt
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      #- static_value:/var/html/static/
+      #- media_value:/var/html/media/
    
     depends_on:
       - frontend
@@ -50,4 +56,4 @@ volumes:
   postgres_data:
   static_value:
   media_value:
-  
+  result_build:
