--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -2,29 +2,27 @@ server {
     listen 80;
     server_tokens off;
     server_name 51.250.25.119;
-    location /media/ {
-        autoindex on;
-        alias /media/;
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
     }
-    location /static/admin/ {
-        autoindex on;
-        alias /static/admin/;
+    location /admin/ {
+      proxy_pass http://backend:8000/admin/;
     }
-    location /static/rest_framework/ {
-        autoindex on;
-        alias /static/rest_framework/;
+    location /backend_static/ {
+        root /var/html/;
+    }
+    location /static/ {
+        root /usr/share/nginx/html/;
+    }
+    location /backend_media/ {
+        root /var/html/;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
-    }
-    location /api/ {
-        proxy_set_header        Host $host;
-        proxy_pass http://backend:8000;
-    }
-    location /admin/ {
-        proxy_set_header        Host $host;
-        proxy_pass http://backend:8000/admin/;
     }
     location / {
         root /usr/share/nginx/html;
@@ -34,9 +32,9 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-    }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
+      }
+      error_page   500 502 503 504  /50x.html;
+      location = /50x.html {
         root   /var/html/frontend/;
-    }
+      }
 }
