--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - postgres_data/var/lib/postgresql/data/
     env_file:
       - ./.env
     ports:
@@ -14,10 +14,10 @@ services:
     image: annarulunat/foodgram:latest
     restart: always
     volumes:
-      - static_value:/app/backend_static/
-      - media_value:/app/backend_media/
-      #- static_value:/app/static/
-      #- media_value:/app/media/
+      #- static_value:/app/backend_static/
+      #- media_value:/app/backend_media/
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
@@ -34,7 +34,6 @@ services:
     image: nginx:1.21.3-alpine
     ports:
       - "80:80"
-    restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
