--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - postgres_data/var/lib/postgresql/data/
     env_file:
       - ./.env
-    ports:
-      - "5432:5432"
+   # ports:
+   #   - "5432:5432"
   
   backend:
     image: annarulunat/foodgram:latest
