--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,58 +1,47 @@
-version: '3.3'
+version: '3.8'
 services:
-
   db:
     image: postgres:13.0-alpine
     volumes:
       - /var/lib/postgresql/data/
     env_file:
       - ./.env
-   # ports:
-   #   - "5432:5432"
   
-  backend:
-    image: annarulunat/foodgram:latest
-    restart: always
-    volumes:
-      #- static_value:/app/backend_static/
-      #- media_value:/app/backend_media/
-      - static_value:/app/static/
-      - media_value:/app/media/
-    depends_on:
-      - db
-    env_file:
-      - ./.env
-
   frontend:
     image: annarulunat/foodgram_frontend:latest
+    restart: always
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
       - backend
   
   nginx:
-    image: nginx:1.21.3-alpine
+    image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/backend_static/
-      - media_value:/var/html/backend_media/
-     # - ./certbot/www:/var/www/certbot
-     # - ./certbot/conf/:/etc/letsencrypt
-      #- static_value:/var/html/static/
-      #- media_value:/var/html/media/
-   
+      - static_value:/var/html/static_backend/
+      - media_value:/var/html/media/
+    restart: always
     depends_on:
       - frontend
-      - backend
-
+  
+  backend:
+    image: annarulunat/foodgram:latest
+    restart: always
+    env_file:
+      - ./.env
+    volumes:
+      - static_value:/app/static_backend/
+      - media_value:/app/media/
+    command: >
+      sh -c "python manage.py collectstatic --noinput &&
+             python manage.py migrate &&
+             gunicorn foodgram.wsgi:application --bind 0:8000"
 
 volumes:
- # db:
-  postgres_data:
   static_value:
   media_value:
-  result_build:
