--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,6 +9,8 @@ server {
     
     location /media/ {
         root /var/html/;
+        autoindex on; 
+        alias /media/; 
     }
       
     location /api/docs/ {
