--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_tokens off;
-    server_name 51.250.105.232;
+    server_name 51.250.105.232 foodgramlunatanna.ddns.net;
 
     location /static_backend/ {
         root /var/html/;
@@ -9,7 +9,7 @@ server {
     
     location /media/ {
         autoindex on;
-        root /var/html/;
+        alias /var/html/media;
     }
       
     location /api/docs/ {
