--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,23 +8,26 @@ services:
       - ./.env
     restart: always
   
+  frontend:
+    image: annarulunat/foodgram_frontend:latest
+    volumes:
+      - ../frontend/:/app/result_build/
+  
   backend:
     image: annarulunat/foodgram:latest
     restart: always
     volumes:
       - static_value:/app/static_backend/
       - media_value:/app/media/
-      - redoc:/app/api/docs/
     depends_on:
       - db
     env_file:
       - ./.env
+    command: >
+      sh -c "python manage.py collectstatic --noinput &&
+             python manage.py migrate &&
+             gunicorn foodgram.wsgi:application --bind 0:8000"
 
-  frontend:
-    image: annarulunat/foodgram_frontend:latest
-    volumes:
-      - ../frontend/:/app/result_build/
-  
   nginx:
     image: nginx:1.21.3-alpine
     ports:
@@ -35,12 +38,9 @@ services:
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static_backend/
       - media_value:/var/html/media/
-    depends_on:
-      - backend
     restart: always
 
 volumes:
   static_value:
   media_value:
   postgres_data:
-  redoc:
