server done, but...

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,8 +8,7 @@ server {
     }
     
     location /media/ {
-        autoindex on;
-        alias /var/html/media;
+        root /var/html/;
     }
       
     location /api/docs/ {
